# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#

AC_PREREQ([2.57])
AC_INIT([uav], [1.0.0], [brian.molnar@gmail.com])

AC_CONFIG_AUX_DIR([config-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE

# Checks for programs.
#AC_PROG_CC([avr-gcc])
#AC_PROG_CXX([avr-g++])
AC_PROG_CC([gcc])
AC_PROG_CXX([g++])
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
